--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Solid State by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Solid State by HTML5 UP</title>
+		<title>Kidsday Karlsruhe</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -21,9 +16,9 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Kidsday Karlsruhe</a></h1>
 						<nav>
-							<a href="#menu">Menu</a>
+							<a href="#menu">Menü</a>
 						</nav>
 					</header>
 
@@ -32,22 +27,23 @@
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a href="index.html">Willkommen beim Kidsday</a></li>
+								<li><a href="generic.html">Informationen</a></li>
+								<li><a href="elements.html">Wo ist der Kidsday?</a></li>
+								<li><a href="#">Wann ist der nächste Kidsday?</a></li>
+								<li><a href="bilder/bilder.html">Bilder</a></li>
 							</ul>
-							<a href="#" class="close">Close</a>
+							<a href="#" class="close">Schließen</a>
 						</div>
 					</nav>
 
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-diamond"></span></div>
-							<h2>This is Solid State</h2>
-							<p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+							<!--<div class="logo"><img alt="logo" src="assets/css/images/hand_blau.svg" width="64" height="64"><img alt="logo" src="assets/css/images/hand_gruen.svg" width="64" height="64"></div>-->
+							<h2><a href="http://kidsday-karlsruhe.de"><img alt="logo" src="assets/css/images/hand_blau.svg" width="48" height="48">Kidsday<img alt="logo" src="assets/css/images/hand_gruen.svg" width="48" height="48"></a></h2>
+							<p>ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a></p>
+							<!--<img src="assets/css/images/nehemia_logo.svg" width="152" height="64">-->
 						</div>
 					</section>
 
@@ -153,18 +149,20 @@
 							</form>
 							<ul class="contact">
 								<li class="fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
+									Kidsday Karlsruhe<br />
+									ein Projekt der<br />
+									<img src="assets/css/images/nehemia_logo.svg" width="152" height="64"><br />
+									Winterstraße 29<br />
+									76137 Karlsruhe
 								</li>
-								<li class="fa-phone">(000) 000-0000</li>
-								<li class="fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="fa-facebook"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								<!--<li class="fa-phone">(000) 000-0000</li>-->
+								<li class="fa-envelope"><a href="#">info@kidsday-karlsruhe.de</a></li>
+								<!--<li class="fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>-->
+								<li class="fa-facebook"><a href="https://www.facebook.com/groups/361511900534275/">Kidsday Karlsruhe @ Facebook</a></li>
+								<!--<li class="fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>-->
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Nehemia Initiative e.V.</li><li>Design: <a href="http://github.com/jtheb">JtheB</a></li>
 							</ul>
 						</div>
 					</section>
