Almost finished! Added content and fixed the .css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Kidsday Karlsruhe</a></h1>
+						<h1><a href="index.html"><img alt="logo" src="assets/css/images/hand_blau.svg" height="24"> Kidsday Karlsruhe <img alt="logo" src="assets/css/images/hand_gruen.svg" height="24"></a></h1>
 						<nav>
 							<a href="#menu">Menü</a>
 						</nav>
@@ -28,10 +28,10 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Willkommen beim Kidsday</a></li>
-								<li><a href="generic.html">Informationen</a></li>
-								<li><a href="elements.html">Wo ist der Kidsday?</a></li>
-								<li><a href="#">Wann ist der nächste Kidsday?</a></li>
+								<li><a href="infos.html">Informationen</a></li>
+								<li><a href="wannwo.html">Wann und wo ist der Kidsday?</a></li>
 								<li><a href="bilder/bilder.html">Bilder</a></li>
+								<li><a href="spenden.html">Spenden</a></li>
 							</ul>
 							<a href="#" class="close">Schließen</a>
 						</div>
@@ -39,10 +39,11 @@
 
 				<!-- Banner -->
 					<section id="banner">
-						<div class="inner">
+						<center class="inner">
+							<h2><center>Willkommen beim:</center></h2>
 							<!--<div class="logo"><img alt="logo" src="assets/css/images/hand_blau.svg" width="64" height="64"><img alt="logo" src="assets/css/images/hand_gruen.svg" width="64" height="64"></div>-->
-							<h2><a href="http://kidsday-karlsruhe.de"><img alt="logo" src="assets/css/images/hand_blau.svg" width="48" height="48">Kidsday<img alt="logo" src="assets/css/images/hand_gruen.svg" width="48" height="48"></a></h2>
-							<p>ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a></p>
+							<h2><center><img alt="logo" src="assets/css/images/Logo_alt.png" height="196"></a></center></h2>
+							<center<p>ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a></p></center>
 							<!--<img src="assets/css/images/nehemia_logo.svg" width="152" height="64">-->
 						</div>
 					</section>
@@ -53,11 +54,17 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<!--<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>-->
 									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Wann wird der nächste Kidsday stattfinden?</h2>
+										<p>Der nächste Kidsday findet am 20.05.2017,
+											in <script>var eventdate = new Date("May 20, 2017 12:00:00 GMT");
+                                            d=new Date();
+                                            count=Math.floor((eventdate.getTime()-d.getTime())/1000);
+                                            count=Math.floor(count/(60*60*24));
+                                            document.write(count);</script> Tagen, <br>
+											in der Winterstraße 29, Karlsruhe Südstadt statt.</p>
+										<a href="wannwo.html" class="special">Zur genauen Anfahrt</a>
 									</div>
 								</div>
 							</section>
@@ -65,11 +72,10 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="assets/css/images/climber.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Bilder der letzten Kidsdays:</h2>
+										<p>Vielleicht findet ihr euch wieder?</p><a href="bilder/bilder.html" class="special">Hier lang!</a>
 									</div>
 								</div>
 							</section>
@@ -77,11 +83,13 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="assets/css/images/pencilbox.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Infos</h2>
+										<p>Ihr fragt euch sicher: <i>"Was ist denn bitte der Kidsday?"</i><br>
+										Nunja, diese Frage ist recht einfach zu beantworten. Der Kidsday DICH ganz herzlich ein! <br>
+											Der Kidsday ist ein toller Tag für Kinder im Alter von 4- 10 Jahren. Er findet ca. alle 2 Monate in der Südstadt, Winterstraße 29, an einem Samstag statt.</p>
+										<a href="infos.html" class="special">Weiterlesen</a>
 									</div>
 								</div>
 							</section>
@@ -89,36 +97,16 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
 									<section class="features">
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
+										<h1 class="major">Hallo ihr lieben KidsDay Mitarbeiter und KidsDay Freunde,</h1>
+
+										<p><i>„Ich weiß noch genau, an welcher Straßenecke ich zum ersten Mal vom Bär zum KidsDay eingeladen wurde. Auch wenn der Bär erst etwas einschüchternd auf mich wirkte, nahm ich die Einladung an und ging glücklicherweise zum KidsDay. Damals war ich 6 Jahre alt...
+											So begann meine „KidsDay Karriere“ – es gab kaum ein KidsDay, an dem ich nicht dabei war. Als Teilnehmer habe ich vor allem die coolen Workshops, das leckere Mittagessen und den vielen Spaß, den wir miteinander hatten, genossen.
+											KidsDay hat mich gestärkt, ich habe viel Neues gelernt, Spaß gehabt, Freundschaften entwickelt, an Selbstvertrauen gewonnen und jedes mal aufs Neue die Tage bis zum nächsten KidsDay gezählt. Ich war beeindruckt von der liebevollen Atmosphäre und den Mitarbeitern. Deswegen war es mein größter Wunsch, eines Tages auch KidsDay Mitarbeiter zu werden.... Heute – 7 Jahre nach meiner ersten Begegnung mit dem Bären - BIN ich KidsDay Mitarbeiter....“</i>
+											- Marcel, 14 Jahre</p>
 									</section>
 									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
+										<li><a href="spenden.html" class="button">Weiterlesen</a></li>
 									</ul>
 								</div>
 							</section>
@@ -128,41 +116,25 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-							<form method="post" action="#">
-								<div class="field">
-									<label for="name">Name</label>
-									<input type="text" name="name" id="name" />
-								</div>
-								<div class="field">
-									<label for="email">Email</label>
-									<input type="email" name="email" id="email" />
-								</div>
-								<div class="field">
-									<label for="message">Message</label>
-									<textarea name="message" id="message" rows="4"></textarea>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
 							<ul class="contact">
 								<li class="fa-home">
 									Kidsday Karlsruhe<br />
-									ein Projekt der<br />
-									<img src="assets/css/images/nehemia_logo.svg" width="152" height="64"><br />
 									Winterstraße 29<br />
 									76137 Karlsruhe
 								</li>
 								<!--<li class="fa-phone">(000) 000-0000</li>-->
-								<li class="fa-envelope"><a href="#">info@kidsday-karlsruhe.de</a></li>
+								<li class="fa-envelope"><a href="mailto:info@kidsday-karlsruhe.de">info@kidsday-karlsruhe.de</a></li>
 								<!--<li class="fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>-->
 								<li class="fa-facebook"><a href="https://www.facebook.com/groups/361511900534275/">Kidsday Karlsruhe @ Facebook</a></li>
 								<!--<li class="fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>-->
+								<li class="fa-institution">
+								ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a><br />
+								<img src="assets/css/images/nehemia_logo.svg" height="128"><br />
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Nehemia Initiative e.V.</li><li>Design: <a href="http://github.com/jtheb">JtheB</a></li>
+								<li>&copy; 2017 <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a></li>
+								<li>Design: <a href="http://github.com/jtheb">JtheB</a></li>
+								<li><a href="datenschutz.html">Datenschutzerklärung</a></li>
 							</ul>
 						</div>
 					</section>
