Updated Hyperlinks and corrected some Typos

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                             count=Math.floor(count/(60*60*24));
                                             document.write(count);</script> Tagen, <br>
 											in der Winterstraße 29, Karlsruhe Südstadt statt.</p>
-										<a href="wannwo.html" class="special">Zur genauen Anfahrt</a>
+										<a href="wannwo.html" class="special">Location</a>
 									</div>
 								</div>
 							</section>
@@ -72,7 +72,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="assets/css/images/climber.jpg" alt="" /></a>
+									<a href="bilder.html" class="image"><img src="assets/css/images/climber.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Bilder der letzten Kidsdays:</h2>
 										<p>Vielleicht findet ihr euch wieder?</p><a href="bilder/bilder.html" class="special">Hier lang!</a>
@@ -83,7 +83,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="assets/css/images/pencilbox.jpg" alt="" /></a>
+									<a href="infos.html" class="image"><img src="assets/css/images/pencilbox.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Infos</h2>
 										<p>Ihr fragt euch sicher: <i>"Was ist denn bitte der Kidsday?"</i><br>
@@ -129,7 +129,7 @@
 								<!--<li class="fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>-->
 								<li class="fa-institution">
 								ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a><br />
-								<img src="assets/css/images/nehemia_logo.svg" height="128"><br />
+									<a href="http://nehemia-initiative.de/"><img src="assets/css/images/nehemia_logo.svg" height="128"><br /></a>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; 2017 <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a></li>
