--- a/infos.html
+++ b/infos.html
@@ -82,7 +82,7 @@
 							<li class="fa-facebook"><a href="https://www.facebook.com/groups/361511900534275/">Kidsday Karlsruhe @ Facebook</a></li>
 							<li class="fa-institution">
 								ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a><br />
-								<img src="assets/css/images/nehemia_logo.svg" height="128"><br />
+								<a href="http://nehemia-initiative.de/"><img src="assets/css/images/nehemia_logo.svg" height="128"><br /></a>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; 2017 <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a></li>
