updated the gallery to a single .html and fixed the hyperlinks

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -30,7 +30,7 @@
 							<li><a href="index.html">Willkommen beim Kidsday</a></li>
 							<li><a href="infos.html">Informationen</a></li>
 							<li><a href="wannwo.html">Wann und wo ist der Kidsday?</a></li>
-							<li><a href="bilder/bilder.html">Bilder</a></li>
+							<li><a href="bilder.html">Bilder</a></li>
 							<li><a href="spenden.html">Spenden</a></li>
 						</ul>
 						<a href="#" class="close">Schließen</a>
