--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								<li><a href="index.html">Willkommen beim Kidsday</a></li>
 								<li><a href="infos.html">Informationen</a></li>
 								<li><a href="wannwo.html">Wann und wo ist der Kidsday?</a></li>
-								<li><a href="bilder/bilder.html">Bilder</a></li>
+								<li><a href="bilder.html">Bilder</a></li>
 								<li><a href="spenden.html">Spenden</a></li>
 							</ul>
 							<a href="#" class="close">Schließen</a>
@@ -75,7 +75,7 @@
 									<a href="bilder.html" class="image"><img src="assets/css/images/climber.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Bilder der letzten Kidsdays:</h2>
-										<p>Vielleicht findet ihr euch wieder?</p><a href="bilder/bilder.html" class="special">Hier lang!</a>
+										<p>Vielleicht findet ihr euch wieder?</p><a href="bilder.html" class="special">Hier lang!</a>
 									</div>
 								</div>
 							</section>
