--- a/bilder.html
+++ b/bilder.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Was ist der Kidsday?</title>
+		<title>Bilder</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -30,7 +30,7 @@
 							<li><a href="index.html">Willkommen beim Kidsday</a></li>
 							<li><a href="infos.html">Informationen</a></li>
 							<li><a href="wannwo.html">Wann und wo ist der Kidsday?</a></li>
-							<li><a href="bilder.html">Bilder</a></li>
+							<li><a href="bilder/bilder.html">Bilder</a></li>
 							<li><a href="spenden.html">Spenden</a></li>
 						</ul>
 						<a href="#" class="close">Schließen</a>
@@ -41,32 +41,26 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Was ist der Kidsday?</h2>
-								<p>Ein toller Tag für Kinder!</p>
+								<h2>Bilder der letzten Kidsdays!</h2>
 							</div>
 						</header>
 
 						<!-- Content -->
-							<div class="wrapper spotlight style2">
-								<div class="inner">
-									<a href="#" class="image"><img src="assets/css/images/bearface.jpg" alt="" /></a>
-									<div class="content">
-									<h3>Ihr fragt euch sicher: <i>"Was ist denn bitte der Kidsday?"</i></h3>
-										<p>Nunja, diese Frage ist recht einfach zu beantworten. Der Kidsday DICH ganz herzlich ein! <br>
-										Der Kidsday ist ein toller Tag für Kinder im Alter von 4- 10 Jahren. Er findet ca. alle 2 Monate in der Südstadt, Winterstraße 29, an einem Samstag statt.</p>
-									<p>Du kannst gespannt sein, was DICH erwartet:</p>
-									<li>Wir treffen uns zumeist alle gemeinsam, um zu singen, zu tanzen, Geschichten zu hören.</li>
-									<li>Dann stehen ein leckeres Mittagessen und einige Spiele auf dem Programm.</li>
-									<li>Danach teilen wir uns auf, um bei verschiedensten Workshops mitzumachen. Hier kannst du dann wählen zwischen Spielen, Malen, Basteln, Backen, Sport machen, Tanzen, Musik machen, und vielem mehr.</li>
-									<li>Anschließend treffen wir uns alle nochmals gemeinsam, um zu erfahren, was die anderen so gemacht haben und machen noch einige tolle Spiele, Singen oder Hören eine spannende Geschichte.</li><br>
-									<p>An Eure Eltern haben wir natürlich auch gedacht!<br>
-									Vor dem Ende des Kidsdays öffnet das Elterncafé meistens um 15:30 Uhr. Hier können Sie noch einen leckeren Kaffee genießen und kurz vor dem Ende dann zu Euch stoßen, um zu schauen, was ihr alles beim Kidsday erlebt habt!</p>
-									<p>Na, hast DU Lust bekommen, mal bei uns vorbeizuschauen? Gerne kannst DU auch DEINE Geschwister, Freunde mitbringen.</p>
-									<p>Wir würden uns tierisch freuen, DICH zu sehen und kennenzulernen!</p>
-									</div>
-								</div>
-							</div>
+						<section id = "one" class = "wrapper spotlight style1">
 
+							<article id = "gallery">
+								<center>
+								<a href="images/fulls/01.jpg" class="pic"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="images/fulls/02.jpg" class="pic"><img src="images/thumbs/02.jpg" alt="" /></a>
+								<a href="images/fulls/03.jpg" class="pic"><img src="images/thumbs/03.jpg" alt="" /></a>
+								<a href="images/fulls/04.jpg" class="pic"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<a href="images/fulls/05.jpg" class="pic"><img src="images/thumbs/05.jpg" alt="" /></a>
+								<a href="images/fulls/06.jpg" class="pic"><img src="images/thumbs/06.jpg" alt="" /></a>
+								<a href="images/fulls/07.jpg" class="pic"><img src="images/thumbs/07.jpg" alt="" /></a>
+								</center>
+							</article>
+
+						</section>
 					</section>
 
 				<!-- Footer -->
@@ -98,6 +92,7 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
