fixed the menu issue and added pictures to the sample gallery

--- a/bilder.html
+++ b/bilder.html
@@ -15,7 +15,7 @@
 			<div id="page-wrapper">
 
 				<!-- Header -->
-				<header id="header" class>
+				<header id="header" class ="alt">
 					<h1><a href="index.html"><img alt="logo" src="assets/css/images/hand_blau.svg" height="24"> Kidsday Karlsruhe <img alt="logo" src="assets/css/images/hand_gruen.svg" height="24"></a></h1>
 					<nav>
 						<a href="#menu">Menü</a>
@@ -25,12 +25,12 @@
 				<!-- Menu -->
 				<nav id="menu">
 					<div class="inner">
-						<h2>Menu</h2>
+						<h2>Menü</h2>
 						<ul class="links">
 							<li><a href="index.html">Willkommen beim Kidsday</a></li>
 							<li><a href="infos.html">Informationen</a></li>
 							<li><a href="wannwo.html">Wann und wo ist der Kidsday?</a></li>
-							<li><a href="bilder/bilder.html">Bilder</a></li>
+							<li><a href="bilder.html">Bilder</a></li>
 							<li><a href="spenden.html">Spenden</a></li>
 						</ul>
 						<a href="#" class="close">Schließen</a>
@@ -41,7 +41,7 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Bilder der letzten Kidsdays!</h2>
+								<h2><a href="index.html"><img alt="logo" src="assets/css/images/hand_blau.svg" height="24"> Bilder der letzten Kidsdays! <img alt="logo" src="assets/css/images/hand_gruen.svg" height="24"></a></h2>
 							</div>
 						</header>
 
