--- a/infos.html
+++ b/infos.html
@@ -25,7 +25,7 @@
 				<!-- Menu -->
 				<nav id="menu">
 					<div class="inner">
-						<h2>Menu</h2>
+						<h2>Menü</h2>
 						<ul class="links">
 							<li><a href="index.html">Willkommen beim Kidsday</a></li>
 							<li><a href="infos.html">Informationen</a></li>
