--- a/bilder.html
+++ b/bilder.html
@@ -41,7 +41,7 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2><a href="index.html"><img alt="logo" src="assets/css/images/hand_blau.svg" height="24"> Bilder der letzten Kidsdays! <img alt="logo" src="assets/css/images/hand_gruen.svg" height="24"></a></h2>
+								<h2>Bilder der letzten Kidsdays!</h2>
 							</div>
 						</header>
 
