--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<center class="inner">
 							<h2><center>Willkommen beim:</center></h2>
 							<!--<div class="logo"><img alt="logo" src="assets/css/images/hand_blau.svg" width="64" height="64"><img alt="logo" src="assets/css/images/hand_gruen.svg" width="64" height="64"></div>-->
-							<h2><center><img alt="logo" src="assets/css/images/Logo_alt.png" height="196"></a></center></h2>
+							<h2><center><a href="#"><img alt="logo" src="assets/css/images/Logo_alt.png" height="196"></a></center></h2>
 							<center<p>ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a></p></center>
 							<!--<img src="assets/css/images/nehemia_logo.svg" width="152" height="64">-->
 						</div>
