added a sample gallery and fixed a little bit of the poptrox() plugin

--- a/bilder.html
+++ b/bilder.html
@@ -15,7 +15,7 @@
 			<div id="page-wrapper">
 
 				<!-- Header -->
-				<header id="header" class ="alt">
+				<header id="header">
 					<h1><a href="index.html"><img alt="logo" src="assets/css/images/hand_blau.svg" height="24"> Kidsday Karlsruhe <img alt="logo" src="assets/css/images/hand_gruen.svg" height="24"></a></h1>
 					<nav>
 						<a href="#menu">Menü</a>
@@ -47,8 +47,22 @@
 
 						<!-- Content -->
 						<section id = "one" class = "wrapper spotlight style1">
-
-							<article id = "gallery">
+							<h2>Hier gibt's die Bilder vom Kidsday im Juni 2016:</h2>
+							<div id = "gallery">
+								<center>
+									<a href="images/fulls/01.jpg" class="pic"><img src="images/thumbs/01.jpg" alt="" /></a>
+									<a href="images/fulls/02.jpg" class="pic"><img src="images/thumbs/02.jpg" alt="" /></a>
+									<a href="images/fulls/03.jpg" class="pic"><img src="images/thumbs/03.jpg" alt="" /></a>
+									<a href="images/fulls/04.jpg" class="pic"><img src="images/thumbs/04.jpg" alt="" /></a>
+									<a href="images/fulls/05.jpg" class="pic"><img src="images/thumbs/05.jpg" alt="" /></a>
+									<a href="images/fulls/06.jpg" class="pic"><img src="images/thumbs/06.jpg" alt="" /></a>
+									<a href="images/fulls/07.jpg" class="pic"><img src="images/thumbs/07.jpg" alt="" /></a>
+								</center>
+							</div>
+						</section>
+						<section id ="two" class = "wrapper spotlight style2 alt">
+							<h2>Hier gibt's die Bilder vom Kidsday im Juni 2016:</h2>
+							<div id = "gallery">
 								<center>
 								<a href="images/fulls/01.jpg" class="pic"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<a href="images/fulls/02.jpg" class="pic"><img src="images/thumbs/02.jpg" alt="" /></a>
@@ -58,7 +72,7 @@
 								<a href="images/fulls/06.jpg" class="pic"><img src="images/thumbs/06.jpg" alt="" /></a>
 								<a href="images/fulls/07.jpg" class="pic"><img src="images/thumbs/07.jpg" alt="" /></a>
 								</center>
-							</article>
+							</div>
 
 						</section>
 					</section>
