Added the actual images and updated the .css

--- a/bilder.html
+++ b/bilder.html
@@ -47,16 +47,19 @@
 
 						<!-- Content -->
 						<section id = "one" class = "wrapper spotlight style1">
-							<h2>Hier gibt's die Bilder vom Kidsday im Juni 2016:</h2>
+							<h2>Hier gibt's die Bilder vom letzten Kidsday am 11. März 2017:</h2>
 							<div id = "gallery">
 								<center>
-									<a href="images/fulls/01.jpg" class="pic"><img src="images/thumbs/01.jpg" alt="" /></a>
-									<a href="images/fulls/02.jpg" class="pic"><img src="images/thumbs/02.jpg" alt="" /></a>
-									<a href="images/fulls/03.jpg" class="pic"><img src="images/thumbs/03.jpg" alt="" /></a>
-									<a href="images/fulls/04.jpg" class="pic"><img src="images/thumbs/04.jpg" alt="" /></a>
-									<a href="images/fulls/05.jpg" class="pic"><img src="images/thumbs/05.jpg" alt="" /></a>
-									<a href="images/fulls/06.jpg" class="pic"><img src="images/thumbs/06.jpg" alt="" /></a>
-									<a href="images/fulls/07.jpg" class="pic"><img src="images/thumbs/07.jpg" alt="" /></a>
+									<a href="images/fulls/2017_03_01.jpg" class="pic"><img src="images/thumbs/2017_03_01.jpg" alt="" height ="232"/></a>
+									<a href="images/fulls/2017_03_02.jpg" class="pic"><img src="images/thumbs/2017_03_02.jpg" alt="" height ="232"/></a>
+									<a href="images/fulls/2017_03_03.jpg" class="pic"><img src="images/thumbs/2017_03_03.jpg" alt="" height ="232"/></a>
+									<a href="images/fulls/2017_03_04.jpg" class="pic"><img src="images/thumbs/2017_03_04.jpg" alt="" height ="232"/></a>
+									<a href="images/fulls/2017_03_05.jpg" class="pic"><img src="images/thumbs/2017_03_05.jpg" alt="" height ="232"/></a>
+									<a href="images/fulls/2017_03_06.jpg" class="pic"><img src="images/thumbs/2017_03_06.jpg" alt="" height ="232"/></a>
+									<a href="images/fulls/2017_03_07.jpg" class="pic"><img src="images/thumbs/2017_03_07.jpg" alt="" height ="232"/></a>
+									<a href="images/fulls/2017_03_08.jpg" class="pic"><img src="images/thumbs/2017_03_08.jpg" alt="" height ="232"/></a>
+									<a href="images/fulls/2017_03_09.jpg" class="pic"><img src="images/thumbs/2017_03_09.jpg" alt="" height ="232"/></a>
+									<a href="images/fulls/2017_03_10.jpg" class="pic"><img src="images/thumbs/2017_03_10.jpg" alt="" height ="232"/></a>
 								</center>
 							</div>
 						</section>
@@ -64,13 +67,19 @@
 							<h2>Hier gibt's die Bilder vom Kidsday im Juni 2016:</h2>
 							<div id = "gallery">
 								<center>
-								<a href="images/fulls/01.jpg" class="pic"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<a href="images/fulls/02.jpg" class="pic"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<a href="images/fulls/03.jpg" class="pic"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<a href="images/fulls/04.jpg" class="pic"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<a href="images/fulls/05.jpg" class="pic"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<a href="images/fulls/06.jpg" class="pic"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<a href="images/fulls/07.jpg" class="pic"><img src="images/thumbs/07.jpg" alt="" /></a>
+									<a href="images/fulls/01.jpg" class="pic"><img src="images/thumbs/01.jpg" alt="" height ="232"/></a>
+									<a href="images/fulls/02.jpg" class="pic"><img src="images/thumbs/02.jpg" alt="" height ="232"/></a>
+									<a href="images/fulls/03.jpg" class="pic"><img src="images/thumbs/03.jpg" alt="" height ="232"/></a>
+									<a href="images/fulls/04.jpg" class="pic"><img src="images/thumbs/04.jpg" alt="" height ="232"/></a>
+									<a href="images/fulls/05.jpg" class="pic"><img src="images/thumbs/05.jpg" alt="" height ="232"/></a>
+									<a href="images/fulls/06.jpg" class="pic"><img src="images/thumbs/06.jpg" alt="" height ="232"/></a>
+									<a href="images/fulls/07.jpg" class="pic"><img src="images/thumbs/07.jpg" alt="" height ="232"/></a>
+									<a href="images/fulls/08.jpg" class="pic"><img src="images/thumbs/08.jpg" alt="" height ="232"/></a>
+									<a href="images/fulls/09.jpg" class="pic"><img src="images/thumbs/09.jpg" alt="" height ="232"/></a>
+									<a href="images/fulls/10.jpg" class="pic"><img src="images/thumbs/10.jpg" alt="" height ="232"/></a>
+									<a href="images/fulls/11.jpg" class="pic"><img src="images/thumbs/11.jpg" alt="" height ="232"/></a>
+									<a href="images/fulls/12.jpg" class="pic"><img src="images/thumbs/12.jpg" alt="" height ="232"/></a>
+									<a href="images/fulls/13.jpg" class="pic"><img src="images/thumbs/13.jpg" alt="" height ="232"/></a>
 								</center>
 							</div>
 
