--- a/infos.html
+++ b/infos.html
@@ -66,6 +66,16 @@
 									</div>
 								</div>
 							</div>
+							<div class="wrapper spotlight style3 alt">
+								<div class="inner">
+									<img src="images/kidsday_leader.jpg" class="image">
+									<div class="content">
+										<h3>Und das Leitungsteam?</h3>
+										<p>Das besteht aus uns, Sarah und Yanina.</p>
+										<p>Falls ihr Fragen habt, könnt ihr uns gerne unter unserer Email kontaktieren: </p>
+										<p><a href="mailto:info@kidsday-karlsruhe.de">info@kidsday-karlsruhe.de</a></p>
+								</div>
+							</div>
 
 					</section>
 
