--- a/bilder.html
+++ b/bilder.html
@@ -50,7 +50,7 @@
 						<section id = "one" class = "wrapper spotlight style1">
 							<h2>Hier gibt's die Bilder vom letzten Kidsday am 11. März 2017:</h2>
 								<center>
-									<a href="images/fulls/2017_03_01.jpg" class="pic"><img src="images/thumbs/2017_03_01.jpg" alt="" height ="232"/></a>
+									<a href="images/fulls/2017_03_01.jpg" class="pic"><img src="images/thumbs/2017_03_01.jpg" alt="" data-max-height ="232"/></a>
 									<a href="images/fulls/2017_03_02.jpg" class="pic"><img src="images/thumbs/2017_03_02.jpg" alt="" height ="232"/></a>
 									<a href="images/fulls/2017_03_03.jpg" class="pic"><img src="images/thumbs/2017_03_03.jpg" alt="" height ="232"/></a>
 									<a href="images/fulls/2017_03_04.jpg" class="pic"><img src="images/thumbs/2017_03_04.jpg" alt="" height ="232"/></a>
