--- a/infos.html
+++ b/infos.html
@@ -52,7 +52,7 @@
 									<a href="#" class="image"><img src="assets/css/images/bearface.jpg" alt="" /></a>
 									<div class="content">
 									<h3>Ihr fragt euch sicher: <i>"Was ist denn bitte der Kidsday?"</i></h3>
-										<p>Nunja, diese Frage ist recht einfach zu beantworten. Der Kidsday DICH ganz herzlich ein! <br>
+										<p>Nun ja, diese Frage ist recht einfach zu beantworten. Der Kidsday lädt DICH ganz herzlich ein! <br>
 										Der Kidsday ist ein toller Tag für Kinder im Alter von 4- 10 Jahren. Er findet ca. alle 2 Monate in der Südstadt, Winterstraße 29, an einem Samstag statt.</p>
 									<p>Du kannst gespannt sein, was DICH erwartet:</p>
 									<li>Wir treffen uns zumeist alle gemeinsam, um zu singen, zu tanzen, Geschichten zu hören.</li>
